fix(css): move bell on the left side
Because, on the right side, it's getting hidden in case of too many overlapped events.

--- a/css/fullcalendar.scss
+++ b/css/fullcalendar.scss
@@ -196,12 +196,13 @@
 	// Reminder icon on events with alarms set
 	.fc-event-nc-alarms {
 		.fc-event-main-frame {
-			width: calc(100% - 17px);
+			width: calc(100% - 15px);
+			margin-left: 15px;
 		}		
 		.icon-event-reminder {
 			position: absolute;
 			top: 2px;
-			right: 2px;
+			left: 2px;
 			content: "";
 			display: inline-block;
 			min-width: 14px;
